Add GameRendererImpl tests